[package]
name = "cacao"
version = "0.1.0"
authors = ["Aaron Marshall <hi@imaaronnicetomeetyou.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
rusoto_credential = "0.45.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
